# n2v

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: conf.py  development_status.md  index.rst  layer_soundness_coverage.md
docs/api/: probabilistic.rst
docs/examples/: probabilistic-verification.rst
docs/theory/: probabilistic-verification.md
docs/user-guide/: set-representations.rst  verification-methods.rst
examples/: README.md
examples/ACASXu/: README.md  run_instance.py  verify_acasxu.py
examples/CompareReachability/: compare_reachability.py
examples/FairN2V/: adult_verify.py
examples/FlowConformal/: CSV_SCHEMAS.md  README.md  REPRODUCING.md  networks.py
examples/Octatope/: README.md
examples/ProbVer/: README.md  showcase_blackbox.py  showcase_scalability.py  showcase_speed.py
examples/VNN-COMP/: benchmark_configs.py  prepare_instance.py  run_instance.py
n2v/: __init__.py
n2v/nn/: __init__.py  neural_network.py  reach.py  relational.py
n2v/probabilistic/: __init__.py  conformal.py  conformal_reach.py
n2v/sets/: box.py  halfspace.py  octatope.py  probabilistic_box.py  star.py  volume.py  zono.py
n2v/utils/: __init__.py  bounds_precomputation.py  falsify.py  load_vnnlib.py  lpsolver.py  model_loader.py  model_preprocessing.py  onnx_validate.py  verify_specification.py  vnncomp.py  vnnlib2.py
scripts/: sinkhorn_alpha_sweep.py
tests/: README.md  conftest.py
tests/differential/: canon.py  golden_specs.txt  naive_eval.py  point_agreement.py  test_golden_snapshot.py  test_parser_differential.py  test_point_agreement.py  update_golden.py
tests/integration/: test_integration.py  test_public_api_flow_reach.py  test_verify_specification.py  test_vnncomp_runner.py
tests/soundness/: test_layer_soundness_matrix.py  test_soundness_leakyrelu.py  test_soundness_mul_div_concat.py  test_soundness_probabilistic.py  test_soundness_relational.py  test_soundness_relu.py  test_soundness_residual_add.py  (+1 more)
(+468 files in other folders)
