[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "n2v"
version = "0.1.0"
description = "Neural network verification using set-based reachability analysis and probabilistic verification"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "VeriVITAL Team", email = "samuel.sasaki@vanderbilt.edu"}
]
keywords = ["neural networks", "verification", "reachability", "formal methods", "pytorch"]

dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "torch>=2.0.0",
    "cvxpy>=1.2.0",
    # Set representations:
    #   networkx: required by Hexatope (imported unconditionally via n2v/sets/hexatope.py)
    "networkx>=2.6",
    # Flow-conformal pipeline:
    #   torchdiffeq: required by FlowODE / log-det score modules
    "torchdiffeq>=0.2.3",
    # ONNX model loading:
    #   onnx: required by n2v/utils/model_loader.py
    #   onnx2torch is the user's fork installed from third_party/onnx2torch
    #   (see README installation step 2). It is NOT a PyPI dependency.
    "onnx>=1.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "onnxscript>=0.1.0",
    # Optional-feature deps the test suite exercises (lazy-imported in
    # the library so they stay out of core [project.dependencies]):
    #   matplotlib  — boundary_2d / star_viz rendering
    #   scikit-learn — GMMScore.fit (sklearn.mixture.GaussianMixture)
    "matplotlib>=3.3.0",
    "scikit-learn>=1.0.0",
]
highs = [
    "highspy>=1.5.0",
]
docs = [
    "sphinx>=7.0",
    "furo>=2024.0",
    "sphinx-copybutton>=0.5",
    "sphinx-design>=0.5",
    "myst-parser>=2.0",
]

[project.urls]
Repository = "https://github.com/sammsaski/n2v"
Documentation = "https://sammsaski.github.io/n2v"

[tool.setuptools.packages.find]
where = ["."]
include = ["n2v*"]
